--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - name: Send CURL
       run: |
-        curl -X POST $NEWBIES_DISCORD_WEBHOOK -d '{"content": "Dzisiaj środa"}'
+        curl -X POST ${{ secrets.NEWBIES_DISCORD_WEBHOOK }} -d '{"content": "Dzisiaj środa"}'
